[gd_scene load_steps=16 format=3 uid="uid://4735ce8v1nmj"]

[ext_resource type="Script" path="res://scenes/shards/shard.gd" id="1_lyirh"]
[ext_resource type="Texture2D" uid="uid://v6c05027g6bj" path="res://assets/image/shards/fire-shard.png" id="2_mk66l"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing_2d.gd" id="2_x3ggt"]
[ext_resource type="Texture2D" uid="uid://dwi8nbw0sll7o" path="res://assets/image/shards/water-shard.png" id="3_bq35i"]
[ext_resource type="Texture2D" uid="uid://cylbfbibypb3s" path="res://assets/image/shards/earth-shard.png" id="4_n2das"]
[ext_resource type="Texture2D" uid="uid://vshgd26yauya" path="res://assets/image/shards/air-shard.png" id="5_4ni8d"]

[sub_resource type="Gradient" id="Gradient_0fgvh"]
offsets = PackedFloat32Array(0, 0.0984456, 0.870466, 0.979275, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 0.439216, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0.980392, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_akymj"]
gradient = SubResource("Gradient_0fgvh")

[sub_resource type="Curve" id="Curve_8emxb"]
min_value = 1.0
max_value = 3.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 2.49451), 5.62032e-05, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_4c8t6"]
curve = SubResource("Curve_8emxb")

[sub_resource type="Curve" id="Curve_2pogr"]
min_value = -2.0
max_value = 2.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_hwk4u"]
curve = SubResource("Curve_2pogr")

[sub_resource type="Curve" id="Curve_un0q2"]
_data = [Vector2(0, 1), 0.0, -0.121429, 0, 0, Vector2(0.882353, 0.758242), -0.214286, -0.214286, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_nnyoe"]
curve = SubResource("Curve_un0q2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_w7xkp"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(32, 6, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
inherit_velocity_ratio = 0.05
orbit_velocity_curve = SubResource("CurveTexture_hwk4u")
gravity = Vector3(0, -98, 0)
damping_min = 55.0
damping_max = 55.0
damping_curve = SubResource("CurveTexture_4c8t6")
scale_curve = SubResource("CurveTexture_nnyoe")
color_ramp = SubResource("GradientTexture1D_akymj")
turbulence_noise_strength = 0.0
turbulence_noise_scale = 0.0

[node name="Shard" type="RigidBody2D"]
collision_layer = 6
collision_mask = 6
gravity_scale = 0.3
can_sleep = false
max_contacts_reported = 3
contact_monitor = true
angular_damp = 2.806
script = ExtResource("1_lyirh")
fire_shard_sprite = ExtResource("2_mk66l")
water_shard_sprite = ExtResource("3_bq35i")
earth_shard_sprite = ExtResource("4_n2das")
air_shard_sprite = ExtResource("5_4ni8d")

[node name="Hitbox" type="CollisionPolygon2D" parent="."]
light_mask = 3
visibility_layer = 3
polygon = PackedVector2Array(-31, 0, -31, 8, 31, 1, 31, 1, 31, -1, -31, -8)

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource("2_x3ggt")

[node name="Sprite2D" type="Sprite2D" parent="Smoothing2D"]
texture = ExtResource("2_mk66l")

[node name="FireParticles" type="GPUParticles2D" parent="Smoothing2D/Sprite2D"]
amount = 55
process_material = SubResource("ParticleProcessMaterial_w7xkp")
lifetime = 3.0
trail_lifetime = 0.1

[node name="SmoothingTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SmoothingTimer" to="." method="_on_smoothing_timer_timeout"]
